@@ -229,6 +229,10 @@ Trunk (unreleased changes)
     HADOOP-5509. PendingReplicationBlocks does not start monitor in the
     constructor. (shv)
 
+    HADOOP-5494. Modify sorted map output merger to lazily read values,
+    rather than buffering at least one record for each segment. (Devaraj Das
+    via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
